@@ -1,3 +1,7 @@
+Thu May 16 16:14:25 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>
+
+	* eval.c (rb_thread_select): cleanup conditional compilation.
+
 Thu May 16 15:14:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* djgpp/config.hin, djgpp/config.sed: catch up with the latest change.
